@@ -76,22 +76,6 @@ public class ToolSimpleTest extends ReplToolTesting {
     }
 
     @Test
-    public void testRawString() {
-        test(false, new String[]{"--enable-preview", "--no-startup"},
-                (a) -> assertCommand(a, "String s = `abc`", "s ==> \"abc\""),
-                (a) -> assertCommand(a, "String a = `abc", ""),
-                (a) -> assertCommand(a, "def`", "a ==> \"abc\\ndef\""),
-                (a) -> assertCommand(a, "String bj = ``Hi, `Bob` and ```Jim```.``", "bj ==> \"Hi, `Bob` and ```Jim```.\""),
-                (a) -> assertCommand(a, "String hw = ````````````", ""),
-                (a) -> assertCommand(a, "Hello, world", ""),
-                (a) -> assertCommand(a, "````````````;", "hw ==> \"\\nHello, world\\n\""),
-                (a) -> assertCommand(a, "String uc = `\\u000d\\u000a`", "uc ==> \"\\\\u000d\\\\u000a\""),
-                (a) -> assertCommand(a, "String es = `\\(.\\)\\1`", "es ==> \"\\\\(.\\\\)\\\\1\""),
-                (a) -> assertCommand(a, "String end = `abc`+`def`+`ghi`", "end ==> \"abcdefghi\"")
-        );
-    }
-
-    @Test
     public void testSwitchExpression() {
         test(false, new String[]{"--enable-preview", "--no-startup"},
                 (a) -> assertCommand(a, "enum Day {MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY }", "|  created enum Day"),
